--- a/main.bib
+++ b/main.bib
@@ -1,3 +1,659 @@
+@mastersthesis{adamsSafeHypothesisTests2020,
+  title = {Safe Hypothesis Tests for the $2 \times 2$ Contingency Table},
+  author = {Adams, Reuben J.},
+  year = {2020},
+  urldate = {2025-01-14},
+  school = {TU delft}
+}
+
+@article{arnoldSequentiallyValidTests2023,
+  title = {Sequentially Valid Tests for Forecast Calibration},
+  author = {Arnold, Sebastian and Henzi, Alexander and Ziegel, Johanna F.},
+  year = {2023},
+  month = sep,
+  journal = {The Annals of Applied Statistics},
+  volume = {17},
+  number = {3},
+  eprint = {2109.11761},
+  primaryclass = {stat},
+  doi = {10.1214/22-AOAS1697},
+  urldate = {2025-02-24},
+  archiveprefix = {arXiv}
+}
+
+@article{bergerCouldFisherJeffreys2003,
+  title = {Could {{Fisher}}, {{Jeffreys}} and {{Neyman}} Have Agreed on Testing?},
+  author = {Berger, James O.},
+  year = {2003},
+  month = feb,
+  journal = {Statistical Science},
+  volume = {18},
+  number = {1},
+  doi = {10.1214/ss/1056397485},
+  urldate = {2025-05-07}
+}
+
+@inproceedings{brannathBipolarTheoremSubsets1999,
+  title = {A Bipolar Theorem for Subsets of $L_{+}^0(\omega, \mathcal{F}, P)$},
+  booktitle = {S{\'e}minaire de {{Probabilit{\'e}s XXXIII}}},
+  author = {Brannath, W. and Schachermayer, W.},
+  year = {1999},
+  pages = {349--354},
+  publisher = {Springer},
+  address = {Berlin, Heidelberg},
+  doi = {10.1007/BFb0096525},
+  isbn = {978-3-540-48407-3}
+}
+
+@phdthesis{brindaAdaptiveEstimationGaussian2018,
+  title = {Adaptive Estimation with Gaussian Radial Basis Mixtures},
+  author = {Brinda, William David},
+  year = {2018},
+  school = {Yale University}
+}
+
+@misc{casgrainAnytimevalidSequentialTesting2023,
+  title = {Anytime-Valid Sequential Testing for Elicitable Functionals via Supermartingales},
+  author = {Casgrain, Philippe and Larsson, Martin and Ziegel, Johanna},
+  year = {2023},
+  month = jun,
+  number = {arXiv:2204.05680},
+  eprint = {2204.05680},
+  primaryclass = {math},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.2204.05680},
+  urldate = {2025-02-28},
+  archiveprefix = {arXiv}
+}
+
+@phdthesis{choeComparingForecastersAbstaining2023,
+  title = {Comparing Forecasters and Abstaining Classifiers},
+  author = {Choe, Yo Joong},
+  year = {2023},
+  month = jun,
+  doi = {10.1184/R1/23576451.v1},
+  urldate = {2025-01-10},
+  school = {Carnegie Mellon University}
+}
+
+@article{choeComparingSequentialForecasters2024,
+  title = {Comparing Sequential Forecasters},
+  author = {Choe, Yo Joong and Ramdas, Aaditya},
+  year = {2024},
+  month = jul,
+  journal = {Operations Research},
+  volume = {72},
+  number = {4},
+  eprint = {2110.00115},
+  primaryclass = {stat},
+  pages = {1368--1387},
+  doi = {10.1287/opre.2021.0792},
+  urldate = {2025-03-04},
+  archiveprefix = {arXiv}
+}
+
+@article{clarkeJeffreysPriorAsymptotically1994,
+  title = {Jeffreys' Prior Is Asymptotically Least Favorable under Entropy Risk},
+  author = {Clarke, Bertrand S. and Barron, Andrew R.},
+  year = {1994},
+  month = aug,
+  journal = {Journal of Statistical Planning and Inference},
+  volume = {41},
+  number = {1},
+  pages = {37--60},
+  doi = {10.1016/0378-3758(94)90153-8},
+  urldate = {2025-05-15},
+  copyright = {https://www.elsevier.com/tdm/userlicense/1.0/}
+}
+
+@misc{clericoOptimalEvalueTesting2025,
+  title = {Optimal E-Value Testing for Properly Constrained Hypotheses},
+  author = {Clerico, Eugenio},
+  year = {2025},
+  month = mar,
+  number = {arXiv:2412.21125},
+  eprint = {2412.21125},
+  primaryclass = {math},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.2412.21125},
+  urldate = {2025-04-15},
+  archiveprefix = {arXiv}
+}
+
+@book{csiszarEntropySearchComplexity2007,
+  title = {Entropy, Search, Complexity},
+  author = {Csisz{\'a}r, Imre and Katona, Gyula O. H. and Tardos, G{\'a}bor},
+  year = {2007},
+  series = {Bolyai Society Mathematical Studies},
+  number = {16},
+  publisher = {Springer},
+  address = {Berlin},
+  isbn = {978-3-540-32573-4 978-963-9453-06-7},
+  lccn = {003.54}
+}
+
+@article{csiszarInformationGeometryAlternating1984,
+  title = {Information Geometry and Alternating Minimization Procedures},
+  author = {Csisz{\'a}r, I. and Tusn{\'a}dy, G.},
+  year = {1984},
+  journal = {Statistics and Decisions, Supplement Issue},
+  volume = {1},
+  pages = {205--237}
+}
+
+@article{grunwaldAuthorsReplyDiscussion2024,
+  title = {Authors' Reply to the Discussion of `Safe Testing'},
+  author = {Gr{\"u}nwald, Peter and {de Heide}, Rianne and Koolen, Wouter},
+  year = {2024},
+  month = nov,
+  journal = {Journal of the Royal Statistical Society Series B: Statistical Methodology},
+  volume = {86},
+  number = {5},
+  pages = {1163--1171},
+  doi = {10.1093/jrsssb/qkae069},
+  urldate = {2025-03-06}
+}
+
+@article{grunwaldFastRatesGeneral2020,
+  title = {Fast Rates for General Unbounded Loss Functions: From {{ERM}} to Generalized Bayes},
+  author = {Gr{\"u}nwald, Peter D. and Mehta, Nishant A.},
+  year = {2020},
+  journal = {Journal of Machine Learning Research},
+  volume = {21},
+  number = {56},
+  pages = {1--80},
+  urldate = {2025-01-15}
+}
+
+@article{grunwaldGameTheoryMaximum2004,
+  title = {Game Theory, Maximum Entropy, Minimum Discrepancy and Robust {{Bayesian}} Decision Theory},
+  author = {Grunwald, Peter D. and Dawid, A. Philip},
+  year = {2004},
+  month = aug,
+  journal = {The Annals of Statistics},
+  volume = {32},
+  number = {4},
+  eprint = {math/0410076},
+  doi = {10.1214/009053604000000553},
+  urldate = {2025-01-21},
+  archiveprefix = {arXiv}
+}
+
+@misc{grunwaldGrowthoptimalEvariablesExtension2024,
+  title = {Growth-Optimal {{E-variables}} and an Extension to the Multivariate Csisz{\'a}r-Sanov-Chernoff Theorem},
+  author = {Gr{\"u}nwald, Peter and Hao, Yunda and Balsubramani, Akshay},
+  year = {2024},
+  month = dec,
+  number = {arXiv:2412.17554},
+  eprint = {2412.17554},
+  primaryclass = {cs},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.2412.17554},
+  urldate = {2025-01-07},
+  archiveprefix = {arXiv}
+}
+
+@article{grunwaldNeymanPearsonEvalues2024,
+  title = {Beyond {{Neyman}}--{{Pearson}}: {{E-values}} Enable Hypothesis Testing with a Data-Driven Alpha},
+  author = {Gr{\"u}nwald, Peter D.},
+  year = {2024},
+  month = sep,
+  journal = {Proceedings of the National Academy of Sciences},
+  volume = {121},
+  number = {39},
+  eprint = {2205.00901},
+  primaryclass = {stat},
+  pages = {e2302098121},
+  publisher = {Proceedings of the National Academy of Sciences},
+  doi = {10.1073/pnas.2302098121},
+  urldate = {2025-05-07},
+  archiveprefix = {arXiv}
+}
+
+@misc{grunwaldOptimalEvaluesExponential2024,
+  title = {Optimal {{E-values}} for Exponential Families: The Simple Case},
+  author = {Gr{\"u}nwald, Peter and Lardy, Tyron and Hao, Yunda and {Bar-Lev}, Shaul K. and {de Jong}, Martijn},
+  year = {2024},
+  month = apr,
+  number = {arXiv:2404.19465},
+  eprint = {2404.19465},
+  primaryclass = {math, stat},
+  publisher = {arXiv},
+  urldate = {2024-12-13},
+  archiveprefix = {arXiv}
+}
+
+@article{grunwaldSafeTesting2024,
+  title = {Safe Testing},
+  author = {Gr{\"u}nwald, Peter and {de Heide}, Rianne and Koolen, Wouter},
+  year = {2024},
+  month = nov,
+  journal = {Journal of the Royal Statistical Society Series B: Statistical Methodology},
+  volume = {86},
+  number = {5},
+  eprint = {1906.07801},
+  primaryclass = {cs, math, stat},
+  pages = {1091--1128},
+  doi = {10.1093/jrsssb/qkae011},
+  urldate = {2025-03-06},
+  archiveprefix = {arXiv}
+}
+
+@misc{grunwaldTutorialIntroductionMinimum2004,
+  title = {A Tutorial Introduction to the Minimum Description Length Principle},
+  author = {Grunwald, Peter},
+  year = {2004},
+  month = jun,
+  number = {arXiv:math/0406077},
+  eprint = {math/0406077},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.math/0406077},
+  urldate = {2025-05-02},
+  archiveprefix = {arXiv}
+}
+
+@misc{haoEvalues$k$sampleTests2024,
+  title = {E-Values for $k$-Sample Tests with Exponential Families},
+  author = {Hao, Yunda and Gr{\"u}nwald, Peter and Lardy, Tyron and Long, Long and Adams, Reuben},
+  year = {2024},
+  month = jan,
+  number = {arXiv:2303.00471},
+  eprint = {2303.00471},
+  primaryclass = {math, stat},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.2303.00471},
+  urldate = {2024-09-04},
+  archiveprefix = {arXiv}
+}
+
+@phdthesis{haoEvaluesAnytimevalidInference2025,
+  title = {E-Values for Anytime-Valid Inference with Exponential Families},
+  author = {Hao, Yunda},
+  year = {2025},
+  month = feb,
+  address = {Leiden},
+  urldate = {2025-03-14},
+  school = {Leiden University}
+}
+
+@misc{haoEvaluesExponentialFamilies2024,
+  title = {E-Values for Exponential Families: The General Case},
+  author = {Hao, Yunda and Gr{\"u}nwald, Peter},
+  year = {2024},
+  month = sep,
+  number = {arXiv:2409.11134},
+  eprint = {2409.11134},
+  primaryclass = {stat},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.2409.11134},
+  urldate = {2024-12-17},
+  archiveprefix = {arXiv}
+}
+
+@misc{hartogFamilywiseErrorRate2025,
+  title = {Family-Wise Error Rate Control with {{E-values}}},
+  author = {Hartog, Will and Lei, Lihua},
+  year = {2025},
+  month = apr,
+  number = {arXiv:2501.09015},
+  eprint = {2501.09015},
+  primaryclass = {stat},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.2501.09015},
+  urldate = {2025-05-02},
+  archiveprefix = {arXiv}
+}
+
+@article{heideWhyOptionalStopping2021,
+  title = {Why Optional Stopping Can Be a Problem for {{Bayesians}}},
+  author = {de Heide, Rianne and Gr{\"u}nwald, Peter D.},
+  year = {2021},
+  month = jun,
+  journal = {Psychonomic Bulletin \& Review},
+  volume = {28},
+  number = {3},
+  eprint = {1708.08278},
+  primaryclass = {stat},
+  pages = {795--812},
+  doi = {10.3758/s13423-020-01803-x},
+  urldate = {2025-01-07},
+  archiveprefix = {arXiv}
+}
+
+@article{hendriksenOptionalStoppingBayes2021,
+  title = {Optional Stopping with Bayes Factors: A Categorization and Extension of Folklore Results, with an Application to Invariant Situations},
+  author = {Hendriksen, Allard and De Heide, Rianne and Gr{\"u}nwald, Peter},
+  year = {2021},
+  month = sep,
+  journal = {Bayesian Analysis},
+  volume = {16},
+  number = {3},
+  doi = {10.1214/20-BA1234},
+  urldate = {2024-08-13}
+}
+
+@misc{henziValidSequentialInference2022,
+  title = {Valid Sequential Inference on Probability Forecast Performance},
+  author = {Henzi, Alexander and Ziegel, Johanna F.},
+  year = {2022},
+  month = jul,
+  number = {arXiv:2103.08402},
+  eprint = {2103.08402},
+  primaryclass = {stat},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.2103.08402},
+  urldate = {2025-02-24},
+  archiveprefix = {arXiv}
+}
+
+@inproceedings{Honda2010AnAO,
+  title = {An Asymptotically Optimal Bandit Algorithm for Bounded Support Models.},
+  booktitle = {Annual Conference Computational Learning Theory},
+  author = {Honda, Junya and Takemura, Akimichi},
+  year = {2010},
+  address = {Haifa, Israel}
+}
+
+@misc{howardTimeuniformChernoffBounds2020,
+  title = {Time-Uniform {{Chernoff}} Bounds via Nonnegative Supermartingales},
+  author = {Howard, Steven R. and Ramdas, Aaditya and McAuliffe, Jon and Sekhon, Jasjeet},
+  year = {2020},
+  month = may,
+  number = {arXiv:1808.03204},
+  eprint = {1808.03204},
+  primaryclass = {math},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.1808.03204},
+  urldate = {2025-02-27},
+  archiveprefix = {arXiv}
+}
+
+@article{howardTimeuniformNonparametricNonasymptotic2021,
+  title = {Time-Uniform, Nonparametric, Nonasymptotic Confidence Sequences},
+  author = {Howard, Steven R. and Ramdas, Aaditya and McAuliffe, Jon and Sekhon, Jasjeet},
+  year = {2021},
+  month = apr,
+  journal = {The Annals of Statistics},
+  volume = {49},
+  number = {2},
+  eprint = {1810.08240},
+  primaryclass = {math},
+  doi = {10.1214/20-AOS1991},
+  urldate = {2025-03-10},
+  archiveprefix = {arXiv}
+}
+
+@misc{kirschElementaryProofFinettis2018,
+  title = {An Elementary Proof of de {{Finetti}}'s {{Theorem}}},
+  author = {Kirsch, Werner},
+  year = {2018},
+  month = sep,
+  number = {arXiv:1809.00882},
+  eprint = {1809.00882},
+  primaryclass = {math},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.1809.00882},
+  urldate = {2025-01-24},
+  archiveprefix = {arXiv}
+}
+
+@misc{koolenGeneralisationVillesInequality2025,
+  title = {A Generalisation of {{Ville}}'s Inequality to Monotonic Lower Bounds and Thresholds},
+  author = {Koolen, Wouter M. and {P{\'e}rez-Ortiz}, Muriel Felipe and Lardy, Tyron},
+  year = {2025},
+  month = feb,
+  number = {arXiv:2502.16019},
+  eprint = {2502.16019},
+  primaryclass = {math},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.2502.16019},
+  urldate = {2025-04-25},
+  archiveprefix = {arXiv}
+}
+
+@article{koolenLogoptimalAnytimevalidEvalues2022,
+  title = {Log-Optimal Anytime-Valid {{E-values}}},
+  author = {Koolen, Wouter M. and Gr{\"u}nwald, Peter},
+  year = {2022},
+  month = feb,
+  journal = {International Journal of Approximate Reasoning},
+  series = {Probability and {{Statistics}}: {{Foundations}} and {{History}}. {{In}} Honor of {{Glenn Shafer}}},
+  volume = {141},
+  pages = {69--82},
+  doi = {10.1016/j.ijar.2021.09.010},
+  urldate = {2025-05-15}
+}
+
+@article{lardyReverseInformationProjections2024,
+  title = {Reverse Information Projections and Optimal {{E-statistics}}},
+  author = {Lardy, Tyron and Gr{\"u}nwald, Peter and Harremo{\"e}s, Peter},
+  year = {2024},
+  month = nov,
+  journal = {IEEE Transactions on Information Theory},
+  volume = {70},
+  number = {11},
+  pages = {7616--7631},
+  doi = {10.1109/TIT.2024.3444458},
+  urldate = {2024-12-12}
+}
+
+@misc{larssonNumeraireEvariableReverse2024,
+  title = {The Numeraire E-Variable and Reverse Information Projection},
+  author = {Larsson, Martin and Ramdas, Aaditya and Ruf, Johannes},
+  year = {2024},
+  month = apr,
+  number = {arXiv:2402.18810},
+  eprint = {2402.18810},
+  primaryclass = {math},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.2402.18810},
+  urldate = {2025-01-29},
+  archiveprefix = {arXiv}
+}
+
+@misc{larssonNumeraireEvariableReverse2025,
+  title = {The Numeraire E-Variable and Reverse Information Projection},
+  author = {Larsson, Martin and Ramdas, Aaditya and Ruf, Johannes},
+  year = {2025},
+  month = feb,
+  number = {arXiv:2402.18810},
+  eprint = {2402.18810},
+  primaryclass = {math},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.2402.18810},
+  urldate = {2025-03-06},
+  archiveprefix = {arXiv}
+}
+
+@misc{liebElementaryProofTheorem2006,
+  title = {Elementary Proof of a Theorem of {{Jean Ville}}},
+  author = {Lieb, Elliott H. and Osherson, Daniel and Weinstein, Scott},
+  year = {2006},
+  month = jul,
+  number = {arXiv:cs/0607054},
+  eprint = {cs/0607054},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.cs/0607054},
+  urldate = {2024-08-17},
+  archiveprefix = {arXiv}
+}
+
+@phdthesis{liEstimationMixtureModels1999,
+  title = {Estimation of Mixture Models},
+  author = {Li, Qiang Jonathan},
+  year = {1999},
+  address = {USA},
+  urldate = {2025-01-15},
+  school = {Yale University},
+  annotation = {AAI9931011\\
+ISBN-10: 0599311037}
+}
+
+@misc{lySafeAnytimevalidInference2024,
+  title = {Safe Anytime-Valid Inference: Practical Maximally Flexible Sampling Designs for Experiments Based on e-Values},
+  author = {Ly, Alexander and Boehm, Udo and Gr{\"u}nwald, Peter and Ramdas, Aaditya and van Ravenzwaaij, Don},
+  year = {2024},
+  month = aug,
+  publisher = {OSF},
+  doi = {10.31234/osf.io/h5vae},
+  urldate = {2025-01-08},
+  archiveprefix = {OSF}
+}
+
+@misc{perez-ortizEstatisticsGroupInvariance2023,
+  title = {E-Statistics, Group Invariance and Anytime Valid Testing},
+  author = {{P{\'e}rez-Ortiz}, Muriel Felipe and Lardy, Tyron and {de Heide}, Rianne and Gr{\"u}nwald, Peter},
+  year = {2023},
+  month = oct,
+  number = {arXiv:2208.07610},
+  eprint = {2208.07610},
+  primaryclass = {math, stat},
+  publisher = {arXiv},
+  urldate = {2024-08-13},
+  archiveprefix = {arXiv}
+}
+
+@article{perez-ortizEstatisticsGroupInvariance2024,
+  title = {E-Statistics, Group Invariance and Anytime-Valid Testing},
+  author = {{P{\'e}rez-Ortiz}, Muriel Felipe and Lardy, Tyron and de Heide, Rianne and Gr{\"u}nwald, Peter D.},
+  year = {2024},
+  month = aug,
+  journal = {The Annals of Statistics},
+  volume = {52},
+  number = {4},
+  eprint = {2208.07610},
+  primaryclass = {math},
+  pages = {1410--1432},
+  publisher = {Institute of Mathematical Statistics},
+  doi = {10.1214/24-AOS2394},
+  urldate = {2025-03-06},
+  archiveprefix = {arXiv}
+}
+
+@inproceedings{pmlr-v206-turner23a,
+  title = {Safe Sequential Testing and Effect Estimation in Stratified Count Data},
+  booktitle = {Proceedings of the 26th International Conference on Artificial Intelligence and Statistics},
+  author = {Turner, Rosanne and Grunwald, Peter},
+  year = {2023-04-25/2023-04-27},
+  series = {Proceedings of Machine Learning Research},
+  volume = {206},
+  eprint = {2302.11401},
+  primaryclass = {stat},
+  pages = {4880--4893},
+  publisher = {PMLR},
+  archiveprefix = {arXiv}
+}
+
+@article{posnerRandomCodingStrategies1975,
+  title = {Random Coding Strategies for Minimum Entropy},
+  author = {Posner, E.},
+  year = {1975},
+  month = jul,
+  journal = {IEEE Transactions on Information Theory},
+  volume = {21},
+  number = {4},
+  pages = {388--391},
+  doi = {10.1109/TIT.1975.1055416},
+  urldate = {2025-01-13}
+}
+
+@misc{ramdasAdmissibleAnytimevalidSequential2022,
+  title = {Admissible Anytime-Valid Sequential Inference Must Rely on Nonnegative Martingales},
+  author = {Ramdas, Aaditya and Ruf, Johannes and Larsson, Martin and Koolen, Wouter},
+  year = {2022},
+  month = nov,
+  number = {arXiv:2009.03167},
+  eprint = {2009.03167},
+  primaryclass = {math},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.2009.03167},
+  urldate = {2025-01-24},
+  archiveprefix = {arXiv}
+}
+
+@misc{ramdasGametheoreticStatisticsSafe2023,
+  title = {Game-Theoretic Statistics and Safe Anytime-Valid Inference},
+  author = {Ramdas, Aaditya and Gr{\"u}nwald, Peter and Vovk, Vladimir and Shafer, Glenn},
+  year = {2023},
+  month = jun,
+  number = {arXiv:2210.01948},
+  eprint = {2210.01948},
+  primaryclass = {cs, math, stat},
+  publisher = {arXiv},
+  urldate = {2024-08-13},
+  archiveprefix = {arXiv}
+}
+
+@article{ramdasTestingExchangeabilityForkconvexity2022,
+  title = {Testing Exchangeability: Fork-Convexity, Supermartingales and e-Processes},
+  author = {Ramdas, Aaditya and Ruf, Johannes and Larsson, Martin and Koolen, Wouter M.},
+  year = {2022},
+  month = feb,
+  journal = {International Journal of Approximate Reasoning},
+  series = {Probability and {{Statistics}}: {{Foundations}} and {{History}}. {{In}} Honor of {{Glenn Shafer}}},
+  volume = {141},
+  eprint = {2102.00630},
+  primaryclass = {math},
+  pages = {83--109},
+  doi = {10.1016/j.ijar.2021.06.017},
+  urldate = {2025-01-27},
+  archiveprefix = {arXiv}
+}
+
+@misc{rosannej.turnerAnytimevalidTestingConfidence2022,
+  title = {Anytime-Valid Testing and Confidence Intervals in Contingency Tables and Beyond},
+  author = {{Rosanne J. Turner} and {Peter Gr{\"u}nwald}},
+  year = {2022},
+  urldate = {2025-01-10}
+}
+
+@phdthesis{rosannejturnerSafeTests22019,
+  title = {Safe Tests for 2 x 2 Contingency Tables and the {{Cochran-Mantel-Haenszel}} Test},
+  author = {{Rosanne J Turner}},
+  year = {2019},
+  month = sep,
+  urldate = {2025-01-09},
+  school = {Leiden University}
+}
+
+@article{rufCompositeGeneralizationVilles2023,
+  title = {A Composite Generalization of {{Ville}}'s Martingale Theorem Using e-Processes},
+  author = {Ruf, Johannes and Larsson, Martin and Koolen, Wouter M. and Ramdas, Aaditya},
+  year = {2023},
+  month = jan,
+  journal = {Electronic Journal of Probability},
+  volume = {28},
+  number = {none},
+  doi = {10.1214/23-EJP1019},
+  urldate = {2025-03-14}
+}
+
+@article{shaferTestMartingalesBayes2011,
+  title = {Test Martingales, {{Bayes}} Factors and p-Values},
+  author = {Shafer, Glenn and Shen, Alexander and Vereshchagin, Nikolai and Vovk, Vladimir},
+  year = {2011},
+  month = feb,
+  journal = {Statistical Science},
+  volume = {26},
+  number = {1},
+  doi = {10.1214/10-STS347},
+  urldate = {2024-08-13}
+}
+
+@incollection{topsoeInformationTheoryService2007,
+  title = {Information Theory at the Service of Science},
+  booktitle = {Entropy, {{Search}}, {{Complexity}}},
+  author = {Tops{\o}e, Flemming},
+  year = {2007},
+  volume = {16},
+  pages = {179--207},
+  publisher = {Springer Berlin Heidelberg},
+  address = {Berlin, Heidelberg},
+  doi = {10.1007/978-3-540-32777-6_8},
+  urldate = {2025-03-03},
+  isbn = {978-3-540-32573-4}
+}
+
 @article{turnerExactAnytimevalidConfidence2023,
   title = {Exact Anytime-Valid Confidence Intervals for Contingency Tables and Beyond},
   author = {Turner, Rosanne J. and Gr{\"u}nwald, Peter D.},
@@ -28,61 +684,138 @@
   archiveprefix = {arXiv}
 }
 
-@article{grunwaldSafeTesting2024,
-  title = {Safe Testing},
-  author = {Gr{\"u}nwald, Peter and {de Heide}, Rianne and Koolen, Wouter},
-  year = {2024},
-  month = nov,
-  journal = {Journal of the Royal Statistical Society Series B: Statistical Methodology},
-  volume = {86},
-  number = {5},
-  eprint = {1906.07801},
-  primaryclass = {cs, math, stat},
-  pages = {1091--1128},
-  doi = {10.1093/jrsssb/qkae011},
-  urldate = {2025-03-06},
+@book{villeEtudeCritiqueNotion1939,
+  title = {{{\'E}tude critique de la notion de collectif}},
+  author = {Ville, Jean},
+  year = {1939},
+  series = {{Monographies des probabilit{\'e}s}},
+  number = {3},
+  publisher = {Gauthier-Villars},
+  address = {Paris}
+}
+
+@article{vovkConfidenceDiscoveriesEvalues2023,
+  title = {Confidence and Discoveries with E-Values},
+  author = {Vovk, Vladimir and Wang, Ruodu},
+  year = {2023},
+  month = may,
+  journal = {Statistical Science},
+  volume = {38},
+  number = {2},
+  eprint = {1912.13292},
+  primaryclass = {math, stat},
+  doi = {10.1214/22-STS874},
+  urldate = {2024-08-13},
   archiveprefix = {arXiv}
 }
 
-@phdthesis{haoEvaluesAnytimevalidInference2025,
-  title = {E-Values for Anytime-Valid Inference with Exponential Families},
-  author = {Hao, Yunda},
-  year = {2025},
-  month = feb,
-  address = {Leiden},
-  urldate = {2025-03-14},
-  school = {Leiden University}
+@article{vovkEvaluesCalibrationCombination2021,
+  title = {E-Values: Calibration, Combination, and Applications},
+  author = {Vovk, Vladimir and Wang, Ruodu},
+  year = {2021},
+  month = jun,
+  journal = {The Annals of Statistics},
+  volume = {49},
+  number = {3},
+  eprint = {1912.06116},
+  primaryclass = {math, stat},
+  doi = {10.1214/20-AOS2020},
+  urldate = {2024-08-13},
+  archiveprefix = {arXiv}
 }
 
-@phdthesis{liEstimationMixtureModels1999,
-  title = {Estimation of Mixture Models},
-  author = {Li, Qiang Jonathan},
-  year = {1999},
-  address = {USA},
-  urldate = {2025-01-15},
-  school = {Yale University},
-  annotation = {AAI9931011\\
-ISBN-10: 0599311037}
+@misc{wagenmakersBayesianScepsisSWEPIS2020,
+  title = {Bayesian Scepsis about {{SWEPIS}}: Quantifying the Evidence That Early Induction of Labour Prevents Perinatal Deaths},
+  author = {Wagenmakers, Eric-Jan and Ly, Alexander},
+  year = {2020},
+  month = jul,
+  publisher = {OSF},
+  doi = {10.31234/osf.io/5ydpb},
+  urldate = {2025-01-13},
+  archiveprefix = {OSF}
 }
 
-@misc{haoEvalues$k$sampleTests2024,
-  title = {E-Values for $k$-Sample Tests with Exponential Families},
-  author = {Hao, Yunda and Gr{\"u}nwald, Peter and Lardy, Tyron and Long, Long and Adams, Reuben},
+@misc{wangExtendedVillesInequality2024,
+  title = {The Extended {{Ville}}'s Inequality for Nonintegrable Nonnegative Supermartingales},
+  author = {Wang, Hongjian and Ramdas, Aaditya},
   year = {2024},
-  month = jan,
-  number = {arXiv:2303.00471},
-  eprint = {2303.00471},
+  month = oct,
+  number = {arXiv:2304.01163},
+  eprint = {2304.01163},
+  primaryclass = {math},
+  publisher = {arXiv},
+  doi = {10.48550/arXiv.2304.01163},
+  urldate = {2025-04-25},
+  archiveprefix = {arXiv}
+}
+
+@misc{wangFalseDiscoveryRate2021,
+  title = {False Discovery Rate Control with E-Values},
+  author = {Wang, Ruodu and Ramdas, Aaditya},
+  year = {2021},
+  month = dec,
+  number = {arXiv:2009.02824},
+  eprint = {2009.02824},
   primaryclass = {math, stat},
   publisher = {arXiv},
-  doi = {10.48550/arXiv.2303.00471},
-  urldate = {2024-09-04},
+  urldate = {2024-08-13},
   archiveprefix = {arXiv}
 }
 
-@phdthesis{brindaAdaptiveEstimationGaussian2018,
-  title = {Adaptive Estimation with Gaussian Radial Basis Mixtures},
-  author = {Brinda, William David},
-  year = {2018},
-  school = {Yale University}
+@misc{wangTestingPvaluesPvalues2022,
+  title = {Testing with P*-Values: {{Between}} p-Values, Mid p-Values, and e-Values},
+  author = {Wang, Ruodu},
+  year = {2022},
+  month = feb,
+  number = {arXiv:2010.14010},
+  eprint = {2010.14010},
+  primaryclass = {math, stat},
+  publisher = {arXiv},
+  urldate = {2024-08-15},
+  archiveprefix = {arXiv}
 }
 
+@unpublished{wangTinyReviewEvalues2023,
+  title = {A Tiny Review on E-Values and e-Processes},
+  author = {Wang, Ruodu},
+  year = {2023},
+  month = jun
+}
+
+@article{wassermanUniversalInference2020,
+  title = {Universal Inference},
+  author = {Wasserman, Larry and Ramdas, Aaditya and Balakrishnan, Sivaraman},
+  year = {2020},
+  month = jul,
+  journal = {Proceedings of the National Academy of Sciences},
+  volume = {117},
+  number = {29},
+  eprint = {1912.11436},
+  primaryclass = {math},
+  pages = {16880--16890},
+  doi = {10.1073/pnas.1922664117},
+  urldate = {2025-03-17},
+  archiveprefix = {arXiv}
+}
+
+@inproceedings{xuOnlineMultipleTesting2024,
+  title = {Online Multiple Testing with E-Values},
+  booktitle = {Proceedings of {{The}} 27th {{International Conference}} on {{Artificial Intelligence}} and {{Statistics}}},
+  author = {Xu, Ziyu and Ramdas, Aaditya},
+  year = {2024},
+  month = apr,
+  pages = {3997--4005},
+  publisher = {PMLR},
+  urldate = {2025-02-24}
+}
+
+@inproceedings{xuUnifiedFrameworkBandit2021,
+  title = {A Unified Framework for Bandit Multiple Testing},
+  booktitle = {Advances in {{Neural Information Processing Systems}}},
+  author = {Xu, Ziyu and Wang, Ruodu and Ramdas, Aaditya},
+  year = {2021},
+  volume = {34},
+  pages = {16833--16845},
+  publisher = {Curran Associates, Inc.},
+  urldate = {2024-09-04}
+}
