Simple folder structure

--- a/main.tex
+++ b/main.tex
@@ -73,7 +73,7 @@
 
 \begin{abstract}
     \noindent
-    This document is an ongoing collection of my writing during my PhD.
+    This document is an ongoing colsdslection of my writing during my PhD.
 \end{abstract}
 
 
